AX: VoiceOver does not re-resolve aria-labelledby when referenced element's    accessible name is provided by aria-label https://bugs.webkit.org/show_bug.cgi?id=317597 rdar://180319221

Reviewed by Dominic Mazzoni.

When an element references another via aria-labelledby, its accessible name
was not recomputed if the referenced element's name changed via aria-label
(or alt/title) — only text-content changes propagated. In the isolated tree
this left a stale cached name.

AXObjectCache::handleTextChanged walks the changed object's ancestors and
notifies the objects each one labels (labelForObjects()) so their names get
recomputed. That propagation was gated behind `if (isText)`, but aria-label,
alt, and title changes reach handleTextChanged with a non-static-text object,
so the labelledby referrer was never notified.

Hoist the labelForObjects() propagation out of the isText block so it runs for
every text/name change.

* LayoutTests/accessibility/aria-labelledby-updates-when-aria-label-changes-expected.txt: Added.
* LayoutTests/accessibility/aria-labelledby-updates-when-aria-label-changes.html: Added.
* Source/WebCore/accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::handleTextChanged):

Canonical link: https://commits.webkit.org/316316@main